test/test33.error
Error: declared variable 'vacuum' as type 'void' on line 2 of file 'test/test33.bas'
