test/test33.bas
sub main()
    dim vacuum as void
end
